fix(pro:search): replace spacing with theme tokens

--- a/packages/pro/search/style/panel.less
+++ b/packages/pro/search/style/panel.less
@@ -27,7 +27,7 @@
     flex-direction: column;
 
     &-inner {
-      padding: 4px 0;
+      padding: var(--ix-padding-size-xs) 0;
     }
 
     &-auto-height {
