--- a/packages/pro/search/style/quick-select.less
+++ b/packages/pro/search/style/quick-select.less
@@ -7,7 +7,7 @@
   }
 
   &-panel {
-    padding: 12px 8px 0;
+    padding: var(--ix-padding-size-md) var(--ix-padding-size-md) 0;
 
     @shortcust-padding: 8px;
     &-shortcuts {
@@ -15,8 +15,8 @@
       width: 100%;
       display: flex;
       flex-wrap: wrap;
-      padding: 0 @shortcust-padding 4px @shortcust-padding;
-      margin-bottom: 8px;
+      padding: 0 @shortcust-padding var(--ix-padding-size-xs) @shortcust-padding;
+      margin-bottom: var(--ix-padding-size-md);
       
       &::after {
         content: ' ';
@@ -34,30 +34,30 @@
       display: flex;
       align-items: stretch;
       justify-content: flex-start;
-      padding: 0 0 12px;
+      padding: 0 0 var(--ix-padding-size-md);
     }
     &-item-separator {
       width: 1px;
-      margin: 0 4px;
+      margin: 0 var(--ix-padding-size-xs);
       flex-shrink: 0;
     }
   }
   &-shortcut {
-    margin-bottom: 8px;
-    height: 24px;
-    padding: 2px 8px;
+    margin-bottom: var(--ix-margin-size-sm);
+    height: var(--ix-height-sm);
+    padding: 2px var(--ix-padding-size-sm);
     display: flex;
     align-items: center;
     border: var(--ix-line-width) var(--ix-line-type) var(--ix-color-border-secondary);
     border-radius: 2px;
     cursor: pointer;
     &:not(&:last-child) {
-      margin-right: 8px;
+      margin-right: var(--ix-margin-size-sm);
     }
 
     &-icon {
-      font-size: 16px;
-      margin-right: 4px;
+      font-size: var(--ix-font-size-icon);
+      margin-right: var(--ix-margin-size-xs);
       color: var(--ix-color-icon-info);
     }
   }
@@ -72,8 +72,7 @@
     &-header {
       position: relative;
       width: 100%;
-      height: 24px;
-      padding: 0 8px;
+      padding: 0 var(--ix-padding-size-sm) var(--ix-padding-size-xs) var(--ix-padding-size-sm);
       display: flex;
       align-items: center;
       justify-content: space-between;
@@ -83,25 +82,25 @@
     }
     &-label {
       height: 100%;
-      max-width: calc(100% - 24px);
+      max-width: calc(100% - var(--ix-height-sm));
       color: var(--ix-color-text-info);
       .ellipsis();
     }
     &-search-bar {
       position: absolute;
       right: 0;
-      height: 24px;
-      width: 24px;
+      height: var(--ix-height-sm);
+      width: var(--ix-height-sm);
       display: flex;
       align-items: center;
       justify-content: flex-end;
       background-color: @pro-search-background-color;
-      border: 1px solid transparent;
+      border: var(--ix-line-width) solid transparent;
       transition: all var(--ix-motion-duration-fast) var(--ix-motion-ease-in-out);
 
       &-opened {
         width: 100%;
-        border: 1px solid @pro-search-border-color;
+        border: var(--ix-line-width) var(--ix-line-type) @pro-search-border-color;
         border-radius: @pro-search-border-radius;
       }
     }
@@ -116,8 +115,8 @@
       transition: none;
     }
     &-search-icon {
-      width: 24px;
-      font-size: 16px;
+      width: var(--ix-height-sm);
+      font-size: var(--ix-font-size-icon);
       flex-shrink: 0;
       color: var(--ix-color-icon);
       cursor: pointer;
@@ -132,9 +131,9 @@
     .@{pro-search-prefix}-select-panel {
       min-height: 230px;
       .@{select-option-prefix} {
-        padding: 8px;
+        padding: var(--ix-padding-size-sm);
         &-selected:not(&-disabled) {
-          border-radius: 2px;
+          border-radius: var(--ix-border-radius-sm);
         }
       }
     }
@@ -144,12 +143,12 @@
     }
     .@{pro-search-prefix}-date-picker-panel {
       width: 493px;
-      padding: 0 8px;
+      padding: var(--ix-padding-size-sm) var(--ix-padding-size-sm) 0 var(--ix-padding-size-sm);
       &-body {
-        padding: 0 0 8px;
+        padding: 0 0 var(--ix-padding-size-sm);
       }
       .@{pro-search-prefix}-panel-footer {
-        padding: 8px 0 0;
+        padding: var(--ix-padding-size-sm) 0 0;
       }
     }
   }
